<?xml version="1.0" encoding="utf-8"?>
<resources>

<string name="app_name">蜂贝贝商城</string>
<string name="home">首页</string>
<string name="cart">购物车</string>
<string name="category">分类</string>
<string name="ucenter">会员中心</string>
<string name="scan">扫一扫</string>
<string name="message">信息</string>
<string name="search_goods">搜索商品</string>
<string name="goods_category">商品分类</string>
<string name="my_ucenter">我的蜂贝贝</string>
<string name="my_order">我的订单</string>
<string name="my_collect">我的收藏</string>
<string name="guess_like_love">猜你喜欢</string>
<string name="confirm">确认</string>
<string name="cancel">取消</string>
<string name="login">登陆</string>
<string name="register">注册</string>
<string name="account">账号</string>
<string name="account_edit_placeholder">用户名/手机号/邮箱</string>
<string name="password">密码</string>
<string name="password_edit_placeholder">请输入密码</string>
<string name="forget_password">忘记密码</string>
<string name="free_reg">免费注册</string>
<string name="wx_login">微信登陆</string>
<string name="qq_login">QQ登陆</string>
<string name="follow_goods">关注的商品</string>
<string name="follow_store">关注的店铺</string>
<string name="browsing_history">浏览记录</string>
<string name="see_all_order">查看全部订单</string>
<string name="wait_pay">待付款</string>
<string name="wait_ship">待发货</string>
<string name="wait_receipt">待收货</string>
<string name="wait_comment">待评价</string>
<string name="my_wallet">我的钱包</string>
<string name="account_balance">账户余额</string>
<string name="point">积分</string>
<string name="voucher">代金券</string>
<string name="card_top_up">充值卡</string>
<string name="all_order">全部订单</string>
<string name="success">成功</string>
<string name="delete_order">删除订单</string>
<string name="order_pay">订单支付</string>
<string name="qr_scan_tips">将二维码/条码放入框内，即可自动扫描</string>
<string name="msg_camera_open_bug">相机打开出错，请稍后重试</string>
<string name="preferences_scanning_title">条码类型</string>
<string name="preferences_decode_1D_industrial_title">一维码：工业</string>
<string name="preferences_decode_1D_product_title">一维码：商品</string>
<string name="preferences_decode_Aztec_title">Aztec</string>
<string name="preferences_decode_Data_Matrix_title">Data Matrix</string>
<string name="preferences_decode_PDF417_title">PDF417 (测试)</string>
<string name="preferences_decode_QR_title">二维码</string>
 <string name="preferences_actions_title">扫描成功</string>
<string name="preferences_play_beep_title">播放提示音</string>
<string name="preferences_vibrate_title">振动</string>
<string name="preferences_copy_to_clipboard_title">复制到剪贴板</string>
<string name="preferences_auto_open_web_title">自动打开网页</string>
<string name="preferences_remember_duplicates_title">保存重复记录</string>
<string name="preferences_remember_duplicates_summary">在历史记录中保存重复的记录</string>
<string name="preferences_history_title">存入历史记录</string>
<string name="preferences_history_summary">自动将条码存入历史记录</string>
<string name="preferences_supplemental_title">检索更多信息</string>
<string name="preferences_supplemental_summary">尝试检索关于条码内容的更多信息</string>
<string name="preferences_general_title">扫描设置</string>
<string name="preferences_front_light_title">闪光灯</string>
<string name="preferences_front_light_summary">设置闪光灯模式</string>
<string name="preferences_auto_focus_title">自动对焦</string>
<string name="preferences_invert_scan_title">反色</string>
<string name="preferences_invert_scan_summary">扫描黑色背景上的白色条码。仅适用于部分设备。</string>
<string name="preferences_bulk_mode_title">批量扫描模式</string>
 <string name="preferences_bulk_mode_summary">连续扫描并保存多个条码</string>
<string name="preferences_orientation_title">不自动旋转</string>
<string name="preferences_result_title">搜索设置</string>
<string name="preferences_custom_product_search_title">自定义搜索网址</string>
<string name="preferences_custom_product_search_summary" formatted="false">替换：％s=内容，％f=格式，％t=类型</string>
<string name="preferences_search_country">搜索引擎国别</string>
<string name="preferences_device_bug_workarounds_title">设备适配</string>
<string name="preferences_disable_continuous_focus_title">不持续对焦</string>
<string name="preferences_disable_continuous_focus_summary">使用标准对焦模式</string>
  <string name="preferences_disable_exposure_title">不曝光</string>
  <string name="preferences_disable_metering_title">不使用距离测量</string>
  <string name="preferences_disable_barcode_scene_mode_title">不进行条形码场景匹配</string>
<string name="msg_error">错误</string>
<string name="msg_invalid_value">值无效</string>
 <string name="msg_bulk_mode_scanned">批量扫描模式：条码已扫描并保存</string>
</resources>
