<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightgrey">
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_alignParentTop="true"
        android:background="@color/green">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/lightgrey"
            android:text="@string/cancel"
            android:textSize="12sp"
            android:textColor="@color/darkgrey"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="13sp"/>
        <View
        	android:layout_width="match_parent"
        	android:layout_height="1dp"
        	android:background="@color/grey"/>
    </RelativeLayout>
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="15dp"
	    android:orientation="vertical">
	    <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:background="@color/white"
	        android:padding="15dp"
	        android:orientation="horizontal">
	        <TextView 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginRight="10dp"
	        	android:layout_marginEnd="10dp"
	            android:text="@string/account"
	            android:textSize="13sp"
	            android:textColor="@color/darkgrey"/>
	        <EditText 
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:singleLine="true"
	            android:background="@color/white"
	            android:hint="@string/account_edit_placeholder"
	            android:textColorHint="@color/grey"
	            android:textColor="@color/black"
	            android:textSize="13sp"/>
	    </LinearLayout>
	    <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	         android:background="@color/white"
	         android:padding="15dp"
	        android:orientation="horizontal">
	        <TextView 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginEnd="10dp"
	            android:layout_marginRight="10dp"
	            android:text="@string/password"
	            android:textSize="13sp"
	            android:textColor="@color/darkgrey"/>
	        <EditText 
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:singleLine="true"
	            android:background="@color/white"
	            android:textColorHint="@color/grey"
	            android:hint="@string/password_edit_placeholder"
	            android:textColor="@color/black"
	            android:textSize="13sp"/>
	    </LinearLayout>
	    <Button 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	       	android:layout_margin="20dp"
	       	android:paddingTop="10dp"
	       	android:paddingBottom="10dp"
	        android:background="#ececec"
	        android:text="@string/login"
	        android:textSize="13sp"
	        android:textColor="#adadad"/>
	</LinearLayout>
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignParentBottom="true"
	    android:orientation="vertical">
		<View
		    android:layout_width="match_parent"
		    android:layout_height="1dp"
		    android:background="@color/grey"/>
		<LinearLayout 
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:background="@color/white"
		    android:padding="10dp"
		    android:layout_gravity="center_horizontal"
		    android:orientation="horizontal">
		    <LinearLayout
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
				android:layout_weight="1"
			    android:gravity="center"
				android:orientation="horizontal">
				<ImageView
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:layout_marginEnd="5dp"
				    android:layout_marginRight="5dp"
				    android:src="@drawable/icon_weixin" />
		    	<Button 
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:background="@color/white"
			        android:text="@string/wx_login"
			        android:textColor="@color/darkgrey"
			        android:textSize="12sp"/>
		    </LinearLayout>
  			<LinearLayout
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
				android:layout_weight="1"
				android:gravity="center_vertical|center_horizontal"
				android:orientation="horizontal">
		    	<ImageView
		    	    android:layout_width="wrap_content"
		    	    android:layout_height="wrap_content"
		    	    android:layout_marginEnd="5dp"
		    	    android:layout_marginRight="5dp"
		    	    android:src="@drawable/icon_qq"/>
			    <Button 
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:background="@color/white"
			        android:text="@string/qq_login"
			        android:textColor="@color/darkgrey"
			        android:textSize="12sp"/>
		     </LinearLayout>
		</LinearLayout>
	</LinearLayout>
</RelativeLayout>
